<resources>
    <string name="app_name">마핏</string>
    <string name="start_touch">시작하려면 터치하세요</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_title">하이핏에 오신 걸 환영합니다.</string>
    <string name="survey_start_title">하이피트와 함께하는 근감소 예측 모델</string>
    <string name="survey_start_explanation1">몇 가지 <b>질문에 답하고</b> </string>
    <string name="survey_start_explanation2">쉽게 <b>근감소증을 예측</b>해보세요. </string>
    <string name="survey_start_explanation3"><b>약 3분</b>이 소요됩니다\n\n하이피트의 진단 및 치료는 <b>전문적인 진료를 요합니다</b></string>
    <string name="survey_start_touch">터치하면 검사가 시작됩니다</string>
    <string name="survey_step1_title">성별을 알려주세요</string>
    <string name="survey_step1_male">남성</string>
    <string name="survey_step1_female">여성</string>
    <string name="survey_continue">다음</string>
    <string name="survey_step2_hint">만 나이를 입력해주세요</string>
    <string name="survey_step2_question">나이가 어떻게 되시나요?</string>
    <string name="survey_step2_content">나이에 따라서 필요한 운동 및 영양 정보가\n달라질 수 있어요</string>
    <string name="survey_step3_content">근감소증 예측에 체질랑지수(BMI)를\n활용합니다</string>
    <string name="survey_step3_question">키를 알려주세요.</string>
    <string name="survey_step4_content">몸무게도 필요합니다.</string>
    <string name="survey_step6_content">데이터를 기반으로 근감소증 유무를\n확인하실 수 있습니다</string>
    <string name="survey_step6_title">수축, 이완기 혈압을 입력해주세요.</string>
    <string name="survey_step6_hint3">15초 맥박 수</string>
    <string name="survey_step6_hint2">이완기 혈압</string>
    <string name="survey_step6_hint1">수축기 혈압</string>
    <string name="survey_step5_title">허리 둘레를 알려주세요 !</string>
    <string name="survey_step5_content">이제 거의 다 왔습니다\n</string>
    <string name="survey_step7_title">다음으로,근감소증 자가 진단 설문지\n를 진행하겠습니다. (SARC-F)</string>
    <string name="survey_step7_content">선택지 중에서 가장 평상시와 비슷한\n상태를 선택해주세요.</string>
    <string name="survey_answer1">전혀 어렵지 않다</string>
    <string name="survey_answer2">좀 어렵다</string>
    <string name="survey_answer3">너무 힘들다</string>
    <string name="survey_step8_content">사과 한 박스 (약 5kg) 를 드는일은,\n나에게</string>
    <string name="survey_step9_title">방 한 쪽 끝에서 다른 쪽 끝까지 걸을 때,\n나는</string>
    <string name="survey_step10_title">의자나 침대에서 다른 의자나 침대로 옮겨\n가는 일은, 나에게</string>
    <string name="survey_step11_title">10개의 계단을 쉬지 않고 오르는 일은,\n나에게</string>
    <string name="complete">완료!</string>
    <string name="sex">성별</string>
    <string name="name">이름</string>
    <string name="age">나이</string>
    <string name="survey_complete_title">근감소증 건강설문 결과</string>
    <string name="survey_complete_recommend">나에게 맞는 운동 추천받기</string>
    <string name="survey_complete_content1">*본 결과는 의사의 처방을 대신하지 않습니다</string>
    <string name="survey_complete_content2">근감소증에 대한 더 많은 정보는\n 아래에서 확인해주세요</string>
    <string name="survey_complete_tip_title1"># 근감소증 예방하기</string>
    <string name="survey_complete_tip_title2"># 근감소증 예방 운동</string>
    <string name="survey_complete_tip_title3"># 근감소증에\n 도움이 되는 성분</string>
    <string name="survey_complete_tip3">단백질은 식품을 통해 동물성 단백질과 식물성 단백질을 골고루 섭취하는 게 가장 좋지만, 음식만으로 일일 단백질 섭취량을 충족시키기 어렵다면, 분말, 음료수, 간식 형태의 보충제를 섭취해도 좋아요.\n\n 비타민D는 근육 세포 내 비타민 수용체와 결합해 단백질 합성을 촉진, 근육세포를 성장시키는 역할을 해요.\n\n 비타민D는 햇빛 노출을 통해 몸 안에서 만들어지지만, 야외 생활이 많지 않은 현대인들의 생활을 고려해 추가적으로 섭취해 주는 것도 좋아요.</string>
    <string name="survey_complete_tip2">꾸준히 걷는 것으로도 근감소증 예방에 도움이 되지만, 유럽 근감소증 학회인 EWGSOP에서는 추가적인 주 3회 이상의 근력운동을 권장하고 있어요.\n\n 단, 자신의 몸 상태를 면밀히 살펴 몸에 무리가 가지 않으면서 근육량과 근력을 향상시킬 수 있는 적절한 운동을 해야 해요.\n\n 또한, 낙상을 방지하기 위한 밸런스 강화 운동과 유연성을 길러주는 스트레칭도 동시에 진행해주면 더 좋아요.</string>
    <string name="survey_complete_tip1">근감소증은 2016년 WHO에서 질병코드를 부여받으며 더 이상 노화로 인한 증상이 아닌 공식적인 질병으로 인정받고 있어요. \n\n2021년 기준, 한국의 근감소증 유병률은 40~64세 중년에서는 약 29.5%, 65세 이상 노인에서는 약 42%로 총 900만명 이상으로 빠르게 증가하고 있어요.</string>
    <string name="home_title">Hi-Fit</string>
    <string name="home_survey_result">건강설문 결과표 다시 보기</string>
    <string name="home_greeting">오늘도 반가워요 ;)\noo님을 위해 오늘도 맞춤형 운동과 영양 정보를\n준비했어요! 건강한 생활 습관도 만들고\n코인으로 상품도 받아가세요~</string>
    <string name="home_greeting_title">OOO님\n안녕하세요!</string>
    <string name="home_exercise_status_title">OOO님의\n5월 운동 현황</string>
    <string name="home_exercise_status_content">지금까지 해오셨던 것처럼 %d회만 \n더 열심히 운동해봐요!</string>
    <string name="home_stamp">오늘의 운동하고\n스탬프 적립하기</string>
    <string name="home_my_coupon"><u>내 쿠폰함</u></string>
    <string name="home_guide">내 몸을 위한\n영양섭취 가이드</string>
    <string name="home_guide_content">대표적인 단백질 식품인 닭가슴살의 경우\n1회 섭취 100g당 단백질을 약 20g을 함유하고 있고,\n두부 한모와 계란 한개에는 단백질 약 8g이 포함되어 있습니다.\n닭가슴살 1덩이, 달걀 2개, 두부 1모를 이용해\n식단을 구성하시길 추천드려요.</string>
    <string name="exercise_title">운동하기</string>
    <string name="exercise_subtitle">맞춤형 10분 운동</string>
    <string name="bmi">BMI</string>
    <string name="weight">몸무게</string>
    <string name="exercise_learn_exercise">운동 배우기</string>
    <string name="survey_complete_contents2">조금만 더 노력해 주시면 생활 습관 만으로 근감소증을 예방할 수 있어요 !\n근감소증 예방을 위해 꾸준한 운동과 올바른 영양섭취를 해 주세요.</string>
    <string name="survey_complete_contents1">앞으로도 좋은 생활습관을 유지해주세요 !\n근감소증 예방을 위해 꾸준한 운동과 올바른\n영양섭취를 해 주세요.</string>
    <string name="survey_complete_contents3">근감소증에 많이 노출되어 있어요 …!\n생활습관을 꼭 바꾸셔서 더욱 건강한 내일을 만들어 보자구요 ~!\n\n근감소증 예방 및 치료를 위해 꾸준한 운동과올바른 영양섭취가 꼭 필요해요.</string>
    <string name="network_error_message">네트워크 오류가 발생했습니다.</string>
    <string name="java_entry_title" translatable="false">Run the ML Kit quickstart written in Java</string>
    <string name="kotlin_entry_title" translatable="false">Run the ML Kit quickstart written in Kotlin</string>
    <string name="ok" translatable="false">OK</string>
    <string name="permission_camera_rationale" translatable="false">Access to the camera is needed for detection</string>
    <string name="no_camera_permission" translatable="false">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error" translatable="false">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="toggle_turn_on" translatable="false">Front</string>
    <string name="toggle_turn_off" translatable="false">Back</string>
    <string name="desc_camera_source_activity" translatable="false">Vision detectors demo with live camera preview</string>
    <string name="desc_still_image_activity" translatable="false">Vision detectors demo with a still image</string>
    <string name="desc_camerax_live_preview_activity" translatable="false">Vision detectors demo with live preview using CameraX. Note that CameraX is only supported on API 21+</string>
    <string name="desc_cameraxsource_demo_activity" translatable="false">Object detection with custom classifier using ML Kit CameraXSource API. Note that CameraX is only supported on API 21+</string>
    <string name="download_error" translatable="false">Download error</string>
    <string name="start_over" translatable="false">Start over</string>
    <string name="menu_item_settings" translatable="false">Settings</string>
    <string name="select_image" translatable="false">Select image</string>
    <string name="custom_object_detection" translatable="false">Custom Object Detector</string>
    <string name="pref_screen" translatable="false">ps</string>
    <string name="pref_screen_title_live_preview" translatable="false">Live preview settings</string>
    <string name="pref_screen_title_still_image" translatable="false">Still image settings</string>
    <string name="pref_screen_title_camerax_live_preview" translatable="false">CameraX live preview settings</string>
    <string name="pref_screen_title_cameraxsource_demo" translatable="false">CameraXSource live preview settings</string>
    <string name="pref_category_info" translatable="false">Detection Info</string>
    <string name="pref_category_face_detection" translatable="false">Face Detection</string>
    <string name="pref_category_object_detection" translatable="false">Object Detection / Custom Object Detection</string>
    <string name="pref_category_automl" translatable="false">AutoML Image Labeling</string>
    <string name="pref_category_pose_detection" translatable="false">Pose Detection</string>
    <string name="pref_category_segmentation" translatable="false">Selfie Segmentation</string>
    <string name="pref_category_text_recognition" translatable="false">Text Recognition</string>
    <string name="pref_category_barcode_scanning" translatable="false">Barcode Scanning</string>
    <string name="pref_category_key_camera" translatable="false">pckc</string>
    <string name="pref_category_title_camera" translatable="false">Camera</string>
    <string name="pref_key_rear_camera_preview_size" translatable="false">rcpvs</string>
    <string name="pref_key_rear_camera_picture_size" translatable="false">rcpts</string>
    <string name="pref_key_front_camera_preview_size" translatable="false">fcpvs</string>
    <string name="pref_key_front_camera_picture_size" translatable="false">fcpts</string>
    <string name="pref_key_camerax_rear_camera_target_resolution" translatable="false">crctas</string>
    <string name="pref_key_camerax_front_camera_target_resolution" translatable="false">cfctas</string>
    <string name="pref_key_camera_live_viewport" translatable="false">clv</string>
    <string name="pref_title_rear_camera_preview_size" translatable="false">Rear camera preview size</string>
    <string name="pref_title_front_camera_preview_size" translatable="false">Front camera preview size</string>
    <string name="pref_title_camerax_rear_camera_target_resolution" translatable="false">CameraX rear camera target resolution</string>
    <string name="pref_title_camerax_front_camera_target_resolution" translatable="false">CameraX front camera target resolution</string>
    <string name="pref_title_camera_live_viewport" translatable="false">Enable live viewport</string>
    <string name="pref_summary_camera_live_viewport" translatable="false">Do not block camera preview drawing on detection</string>
    <string name="pref_title_info_hide" translatable="false">Hide detection info</string>
    <string name="pref_key_info_hide" translatable="false">ih</string>
    <string name="pref_key_enable_auto_zoom" translatable="false">eaz</string>
    <string name="pref_title_enable_auto_zoom" translatable="false">Enable auto zoom</string>
    <string name="pref_title_group_recognized_text_in_blocks" translatable="false">Group recognized text in paragraphs</string>
    <string name="pref_key_group_recognized_text_in_blocks" translatable="false">grtib</string>
    <string name="pref_title_show_language_tag" translatable="false">Show language identified</string>
    <string name="pref_key_show_language_tag" translatable="false">slt</string>
    <string name="pref_title_show_text_confidence" translatable="false">Show confidence score</string>
    <string name="pref_key_show_text_confidence" translatable="false">stc</string>
    <string name="pref_title_object_detector_enable_multiple_objects" translatable="false">Enable multiple objects</string>
    <string name="pref_key_live_preview_object_detector_enable_multiple_objects" translatable="false">lpodemo</string>
    <string name="pref_key_still_image_object_detector_enable_multiple_objects" translatable="false">siodemo</string>
    <string name="pref_title_object_detector_enable_classification" translatable="false">Enable classification</string>
    <string name="pref_key_live_preview_object_detector_enable_classification" translatable="false">lpodec</string>
    <string name="pref_key_still_image_object_detector_enable_classification" translatable="false">siodec</string>
    <string name="pref_title_face_detector_landmark_mode" translatable="false">Landmark mode</string>
    <string name="pref_key_live_preview_face_detection_landmark_mode" translatable="false">lpfdlm</string>
    <string name="pref_entries_face_detector_landmark_mode_no_landmarks" translatable="false">No landmarks</string>
</resources>