<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragment.survey.SurveyStep9Fragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="50dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/survey_step9_txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:fontFamily="@font/notosanskr_bold_hestia"
            android:text="@string/survey_step9_title"
            android:textColor="@color/violet2"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline">

            <RadioButton
                android:id="@+id/survey_step9_radio_btn1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:button="@null"
                android:fontFamily="@font/notosanskr_medium_hestia"
                android:gravity="center"
                android:paddingVertical="12dp"
                android:text="@string/survey_answer1"
                android:textColor="@drawable/selector_radio_text"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/survey_step9_radio_btn2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@null"
                android:fontFamily="@font/notosanskr_medium_hestia"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                android:paddingVertical="12dp"
                android:text="@string/survey_answer2"
                android:textColor="@drawable/selector_radio_text"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/survey_step9_radio_btn3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@null"
                android:fontFamily="@font/notosanskr_medium_hestia"
                android:gravity="center"
                android:paddingVertical="12dp"
                android:text="@string/survey_answer3"
                android:textColor="@drawable/selector_radio_text"
                android:textSize="20sp" />
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/survey_step9_btn_continue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="12dp"
            android:fontFamily="@font/notosanskr_bold_hestia"
            android:textColor="@color/white"
            android:text="@string/survey_continue"
            android:background="@drawable/violet_button"
            android:layout_marginBottom="30dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>